# robo-projects

./: README.md  requirements.txt
autonomous-flight/: display.py  quadrotor-basics.ipynb
jazzy-ros/.devcontainer/: Dockerfile  commands.txt  devcontainer.json
jazzy-ros/experiments/src/differential_drive/: package.xml  setup.py
jazzy-ros/ros_ws/: .gitignore
jazzy-ros/ros_ws/src/simple_robot/: package.xml  pyproject.toml  setup.py
modern_robotics/: pyproject.toml
modern_robotics/modern-robotics/: foundations.md
