[tool.poetry]
name = "simple_robot"
version = "0.1.0"
description = "A project dedicated to a 2-wheel differential drive robot."
authors = ["Ryan Partridge <rpartridge101@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.scripts]
# entry_points
# my_node = "simple_robot.main:main"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
